--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
     <link rel="stylesheet" href="./../src/css/app.css" />
-    <title>React App</title>
+    <title>Digital Store</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
